# CSC340group

./: CMakeLists.txt  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  Person.cpp  Person.h  Student.cpp  Student.h  main.cpp  students.txt
